--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@rollup/plugin-typescript": "^8.2.1",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/marked": "^2.0.1",
     "rollup": "^1.32.1",
     "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-svelte": "~6.1.1",
@@ -34,7 +35,7 @@
     "index.d.ts"
   ],
   "description": " Ultra lightweight svelternationalization (s20n) internationalization library. ",
-  "version": "0.4.1",
+  "version": "0.4.3",
   "dependencies": {
     "json5": "^2.2.0",
     "marked": "^2.0.1"
