--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
     "svelte",
     "i18n",
     "localization",
-    "i10n",
+    "l10n",
     "internationalization",
     "translation",
     "markdown",
     "multiline",
-    "s20n"
+    "s20n",
+    "featured",
+    "youpi",
+    "modular"
   ],
   "files": [
     "src",
@@ -52,7 +55,7 @@
     "typings",
     "dist"
   ],
-  "description": " Ultra lightweight svelternationalization (s20n) internationalization library. ",
+  "description": "Ultra lightweight svelternationalization (s20n) internationalization library.",
   "dependencies": {
     "lodash.get": "^4.4.2"
   },
