--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,11 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-typescript": "^8.2.1",
+    "@tsconfig/svelte": "^1.0.0",
+    "@types/marked": "^2.0.1",
+    "marked": "^2.0.1",
+    "rollup": "^2.45.0",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
@@ -19,14 +23,12 @@
     "s20n": "file:..",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
+    "svelte-highlight": "^0.7.1",
     "svelte-preprocess": "^4.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "typescript": "^4.0.0",
     "tslib": "^2.0.0",
-    "@tsconfig/svelte": "^1.0.0"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
-    "marked": "^2.0.1",
     "sirv-cli": "^1.0.0"
   }
 }
