--- a/package.json
+++ b/package.json
@@ -1,39 +1,41 @@
 {
   "name": "s20n",
-  "svelte": "src/index.ts",
-  "module": "./index.mjs",
-  "main": "./dist/index.js",
-  "types": "./index.d.ts",
-  "version": "1.0.0-beta.0",
+  "description": "Ultra lightweight svelternationalization (s20n) internationalization library.",
+  "svelte": "dist/index.js",
+  "module": "dist/index.mjs",
+  "main": "dist/index.umd.js",
+  "types": "dist/ts/index.d.ts",
+  "version": "1.0.0-beta-1",
   "scripts": {
-    "build": "rollup -c && tsc",
-    "build:production": "rollup -c --environment INCLUDE_DEPS,BUILD:production && tsc",
-    "test": "jest"
+    "build": "rm -rf ./dist && rollup -c",
+    "dev": "rollup -c -w",
+    "validate": "svelte-check",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "src",
+    "dist"
+  ],
+  "dependencies": {
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^26.0.22",
-    "@types/lodash.get": "^4.4.6",
-    "@types/marked": "^2.0.1",
-    "@types/node": "^14.14.37",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "rollup": "^2.44.0",
-    "rollup-plugin-svelte": "~7.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.0.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/lodash-es": "^4.17.4",
+    "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
+    "rollup": "^2.32.0",
+    "rollup-plugin-execute": "^1.1.1",
+    "rollup-plugin-filesize": "^9.0.2",
+    "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.37.0",
-    "svelte-check": "^1.3.0",
-    "svelte-jester": "^1.3.2",
-    "svelte-preprocess": "^4.7.0",
-    "ts-jest": "^26.5.4",
-    "tslib": "^2.1.0",
-    "typescript": "^4.2.3"
+    "svelte": "^3.24.0",
+    "svelte-check": "^1.0.60",
+    "svelte-preprocess": "^4.5.1",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.3"
   },
   "keywords": [
     "svelte",
@@ -43,22 +45,12 @@
     "internationalization",
     "translation",
     "markdown",
-    "multiline",
+    "extensible",
     "s20n",
     "featured",
-    "youpi",
+    "language",
     "modular"
   ],
-  "files": [
-    "src",
-    "index.d.ts",
-    "typings",
-    "dist"
-  ],
-  "description": "Ultra lightweight svelternationalization (s20n) internationalization library.",
-  "dependencies": {
-    "lodash.get": "^4.4.2"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Marr11317/s20n.git"
