--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-preprocess": "^4.0.0",
-    "svelte-typescript-component": "file:..",
+    "s20n": "file:..",
     "tslib": "^2.0.0",
     "typescript": "^3.9.3"
   },
