--- a/web/package.json
+++ b/web/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
-    "validate": "svelte-check"
+  "private": true,
+  "name": "svelte-docs-template",
+  "version": "0.3.2",
+  "dependencies": {
+    "@svelte-docs/server": "^0.1.6"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-typescript": "^6.0.0",
-    "@tsconfig/svelte": "^1.0.10",
-    "@types/marked": "^2.0.2",
-    "rollup": "^2.3.4",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^1.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "s20n": "file:..",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.3"
+    "@svelte-docs/core": "^0.10.13",
+    "@svelte-docs/publisher": "^0.2.3",
+    "@svelte-docs/themes": "^1.0.1",
+    "npm-run-all": "^4.1.5"
   },
-  "dependencies": {
-    "marked": "^2.0.3",
-    "sirv-cli": "^1.0.0"
+  "scripts": {
+    "build": "rollup -c node_modules/@svelte-docs/core/rollup.config.js",
+    "autobuild": "rollup -c node_modules/@svelte-docs/core/rollup.config.js -w",
+    "dev": "run-p start:dev start:pagewatch autobuild",
+    "start": "node node_modules/@svelte-docs/server",
+    "start:dev": "node node_modules/@svelte-docs/server --dev --single",
+    "start:pagewatch": "node node_modules/@svelte-docs/core/watcher",
+    "deploy": "npm run build && node node_modules/@svelte-docs/publisher"
   }
 }
