--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "name": "svelte-docs-template",
   "version": "0.3.2",
   "dependencies": {
-    "@svelte-docs/server": "^0.1.6"
+    "@svelte-docs/server": "^0.1.6",
+    "json5": "^2.2.0"
   },
   "devDependencies": {
     "@svelte-docs/core": "^0.10.13",
