--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "src",
     "dist"
   ],
+  "dependencies": {
+    "file-saver": "^2.0.5"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.10",
+    "@types/file-saver": "^2.0.2",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "rollup": "^2.32.0",
@@ -36,6 +40,7 @@
     "typescript": "^4.0.3"
   },
   "keywords": [
+    "power-translate",
     "svelte",
     "i18n",
     "localization",
