--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "dist"
   ],
   "dependencies": {
-    "file-saver": "^2.0.5"
+    "file-saver-es": "^2.0.5"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.0.0",
     "@tsconfig/svelte": "^1.0.10",
-    "@types/file-saver": "^2.0.2",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
     "rollup": "^2.32.0",
